crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned-uses-default-config.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 202
expression: "zizmor().input(input_under_test(\"unpinned-uses/menagerie-of-uses.yml\")).run()?"
---
error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:22:9
   |
22 |       - uses: pypa/gh-action-pypi-publish@release/v1
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

3 findings (2 suppressed): 0 informational, 0 low, 0 medium, 1 high
