crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned_uses-2.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 172
expression: "zizmor().input(input_under_test(\"unpinned-uses.yml\")).run()?"
---
warning[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:22:9
   |
22 |       - uses: docker://ubuntu
   |         ^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a tag, branch, or hash ref
   |
   = note: audit confidence → High

warning[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:28:9
   |
28 |       - uses: docker://ghcr.io/pypa/gh-action-pypi-publish
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a tag, branch, or hash ref
   |
   = note: audit confidence → High

2 findings: 0 informational, 0 low, 2 medium, 0 high
