crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned_uses-5.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 192
expression: "zizmor().input(input_under_test(\"unpinned-uses/issue-659-repro.yml\")).args([\"--pedantic\"]).run()?"
---
warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:2:1
   |
 2 | / name: issue-659-repro
 3 | |
 4 | | on:
 5 | |   workflow_dispatch:
...  |
24 | |         with:
25 | |           node-version: ${{ env.NODE_VERSION }}
   | |________________________________________________^ default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:12:3
   |
12 | /   test-itg:
13 | |     name: test-itg
14 | |     runs-on: ${{ matrix.os }}
15 | |     timeout-minutes: 1
...  |
24 | |         with:
25 | |           node-version: ${{ env.NODE_VERSION }}
   | |                                                ^
   | |                                                |
   | |________________________________________________this job
   |                                                  default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

2 findings: 0 informational, 0 low, 2 medium, 0 high
