crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned_uses.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 165
expression: "zizmor().input(input_under_test(\"unpinned-uses.yml\")).args([\"--pedantic\"]).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
warning[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:21:9
   |
21 |       - uses: docker://ubuntu
   |         ^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a tag, branch, or hash ref
   |
   = note: audit confidence → High

warning[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:27:9
   |
27 |       - uses: docker://ghcr.io/pypa/gh-action-pypi-publish
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a tag, branch, or hash ref
   |
   = note: audit confidence → High

2 findings: 0 informational, 0 low, 2 medium, 0 high
