crates/zizmor/tests/integration/snapshots/integration__snapshot__unredacted_secrets.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 794
expression: "zizmor().input(input_under_test(\"unredacted-secrets.yml\")).run()?"
---
warning[unredacted-secrets]: leaked secret values
  --> @@INPUT@@:17:18
   |
17 |           stuff: ${{ fromJSON(secrets.password) }}
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ bypasses secret redaction
   |
   = note: audit confidence → High

warning[unredacted-secrets]: leaked secret values
  --> @@INPUT@@:20:23
   |
20 |           otherstuff: ${{ fromJson(secrets.otherstuff).field }}
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ bypasses secret redaction
   |
   = note: audit confidence → High

4 findings (2 suppressed): 0 informational, 0 low, 2 medium, 0 high
